[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/cbar.gd" type="Script" id=1]
[ext_resource path="res://ui/fonts/seguihis.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/fonts/Arial.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/recovery/option_2.gd" type="Script" id=4]
[ext_resource path="res://ui/themes/text_entry_border.tres" type="Theme" id=5]
[ext_resource path="res://ui/themes/default_button.tres" type="Theme" id=6]
[ext_resource path="res://ui/icons/application_icon.png" type="Texture" id=7]

[sub_resource type="Animation" id=14]
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 64, -0.25, 0, 0.25, 0, 32, -0.25, 0, 0.25, 0, 64, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 360, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.2, 0.8 )
}

[sub_resource type="DynamicFont" id=1]
size = 25
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 1, 1, 0.0392157 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=13]
size = 13
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 13
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=7]
resource_name = "try_another_way"
length = 0.6
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 608, -0.25, 0, 0.25, 0, 560, -0.25, 0, 0.25, 0, 568, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.6 )
}

[sub_resource type="DynamicFont" id=8]
use_filter = true
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="backround" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 0.997
margin_bottom = 1.79999
color = Color( 0.137255, 0.137255, 0.137255, 1 )

[node name="icon" type="TextureRect" parent="backround"]
margin_left = 448.0
margin_top = 64.0
margin_right = 576.0
margin_bottom = 192.0
rect_pivot_offset = Vector2( 64, 64 )
texture = ExtResource( 7 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="backround/icon"]
autoplay = "icon"
anims/icon = SubResource( 14 )

[node name="title" type="Label" parent="backround"]
margin_left = 320.0
margin_top = 200.0
margin_right = 704.0
margin_bottom = 235.0
custom_fonts/font = SubResource( 1 )
text = "Developer Bypass Code"
align = 1
valign = 1

[node name="indicator" type="Label" parent="backround"]
margin_left = 328.0
margin_top = 424.0
margin_right = 696.0
margin_bottom = 440.0
align = 1
valign = 1

[node name="otp" type="Panel" parent="."]
margin_left = 320.0
margin_top = 256.0
margin_right = 704.0
margin_bottom = 448.0
custom_styles/panel = SubResource( 10 )

[node name="otp_label" type="RichTextLabel" parent="otp"]
margin_left = 16.0
margin_top = 16.0
margin_right = 368.0
margin_bottom = 112.0
custom_colors/default_color = Color( 1, 1, 1, 0.627451 )
custom_fonts/normal_font = SubResource( 13 )
bbcode_enabled = true
bbcode_text = "If you were unable to answer the recovery question or could not get the security code, you may contact the developer of this software using the [color=#3598db][url]contact[/url][/color] page to get a developers bypass code."
text = "If you were unable to answer the recovery question or could not get the security code, you may contact the developer of this software using the contact page to get a developers bypass code."

[node name="otp_input" type="LineEdit" parent="otp"]
margin_left = 64.0
margin_top = 128.0
margin_right = 320.0
margin_bottom = 160.0
theme = ExtResource( 5 )
max_length = 6
context_menu_enabled = false
placeholder_text = "Enter Bypass Code"
caret_blink = true

[node name="continue" type="Button" parent="."]
margin_left = 936.0
margin_top = 552.0
margin_right = 1009.0
margin_bottom = 584.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 6 )
text = "Continue"

[node name="try_another_way" type="Button" parent="."]
margin_left = 456.0
margin_top = 608.0
margin_right = 568.0
margin_bottom = 629.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 0.705882 )
custom_colors/font_color_hover = Color( 0, 0.835294, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "Try another way"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="try_another_way"]
autoplay = "try_another_way"
anims/try_another_way = SubResource( 7 )

[node name="cancel" type="Button" parent="."]
margin_left = 8.0
margin_top = 560.0
margin_right = 72.0
margin_bottom = 592.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.835294, 1, 1 )
text = "Cancel"
flat = true

[node name="cbar" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 32.0
script = ExtResource( 1 )

[node name="exit" type="Button" parent="cbar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 998.499
margin_top = 2.584
margin_right = -2.50098
margin_bottom = -4.416
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "X"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="meta_clicked" from="otp/otp_label" to="." method="_on_otp_label_meta_hover_ended"]
[connection signal="pressed" from="continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="try_another_way" to="." method="_on_try_another_way_pressed"]
[connection signal="pressed" from="cancel" to="." method="_on_cancel_pressed"]
[connection signal="gui_input" from="cbar" to="cbar" method="_on_cbar_gui_input"]
[connection signal="pressed" from="cbar/exit" to="cbar" method="_on_exit_pressed"]
